--- a/Reference/toc.yml
+++ b/Reference/toc.yml
@@ -1,61 +1,101 @@
 - name: Node Reference
   items:
+  - name: Primitives
+    items:
+    - name: Constant
+      href: Nodes/Primitive--Constant.md
+    - name: Draw
+      href: Nodes/Primitive--Draw.md
+    - name: Dunes
+      href: Nodes/Primitive--Dunes.md
+    - name: Fault
+      href: Nodes/Primitive--Fault.md
+    - name: File
+      href: Nodes/Primitive--File.md
+    - name: Gradient
+      href: Nodes/Primitive--Gradient.md
+    - name: Igneous
+      href: Nodes/Primitive--Igneous.md
+    - name: LineNoise
+      href: Nodes/Primitive--LineNoise.md
+    - name: Mountain
+      href: Nodes/Primitive--Mountain.md
+    - name: Perlin
+      href: Nodes/Primitive--Perlin.md
+    - name: Plates
+      href: Nodes/Primitive--Plates.md
+    - name: SlopeNoise
+      href: Nodes/Primitive--SlopeNoise.md
+    - name: Vector
+      href: Nodes/Primitive--Vector.md
+    - name: Voronoi
+      href: Nodes/Primitive--Voronoi.md
+    - name: Voronoi+
+      href: Nodes/Primitive--Voronoi+.md
   - name: Adjustments
     items:
-      - name: AutoLevel
-        href: Nodes/Adjustment--AutoLevel.md
-      - name: BiasGain
-        href: Nodes/Adjustment--BiasGain.md
-      - name: Blur
-        href: Nodes/Adjustment--Blur.md
-      - name: Clamp
-        href: Nodes/Adjustment--Clamp.md
-      - name: Contrast
-        href: Nodes/Adjustment--Contrast.md
-      - name: Denoise
-        href: Nodes/Adjustment--Denoise.md
-      - name: Displace
-        href: Nodes/Adjustment--Displace.md
-      - name: Flip
-        href: Nodes/Adjustment--Flip.md
-      - name: Gamma
-        href: Nodes/Adjustment--Gamma.md
-      - name: Heal
-        href: Nodes/Adjustment--Heal.md
-      - name: Sharpen
-        href: Nodes/Adjustment--Sharpen.md
-      - name: Sine
-        href: Nodes/Adjustment--Sine.md
-      - name: Threshold
-        href: Nodes/Adjustment--Threshold.md
-      - name: Transform
-        href: Nodes/Adjustment--Transform.md
-      - name: Zero Borders
-        href: Nodes/Adjustment--Zero Borders.md
-  - name: Color
+     - name: AutoLevel
+       href: Nodes/Adjustment--AutoLevel.md
+     - name: BiasGain
+       href: Nodes/Adjustment--BiasGain.md
+     - name: Blur
+       href: Nodes/Adjustment--Blur.md
+     - name: Clamp
+       href: Nodes/Adjustment--Clamp.md
+     - name: Combine
+       href: Nodes/Combiner--Combine.md
+     - name: Denoise
+       href: Nodes/Adjustment--Denoise.md
+     - name: Displace
+       href: Nodes/Adjustment--Displace.md
+     - name: Flip
+       href: Nodes/Adjustment--Flip.md
+     - name: Gamma
+       href: Nodes/Adjustment--Gamma.md
+     - name: Heal
+       href: Nodes/Adjustment--Heal.md
+     - name: Sharpen
+       href: Nodes/Adjustment--Sharpen.md
+     - name: Sine
+       href: Nodes/Adjustment--Sine.md
+     - name: Threshold
+       href: Nodes/Adjustment--Threshold.md
+     - name: Transform
+       href: Nodes/Adjustment--Transform.md
+     - name: Zero Borders
+       href: Nodes/Adjustment--Zero Borders.md
+  - name: Filters
     items:
-    - name: Biome
-      href: Nodes/Color--Biome.md
-    - name: CLUTer
-      href: Nodes/Color--CLUTer.md
-    - name: Mixer
-      href: Nodes/Color--Mixer.md
-    - name: SatMaps
-      href: Nodes/Color--SatMaps.md
-  - name: Combiners
-    items:
-    - name: Combine
-      href: Nodes/Combiner--Combine.md
-  - name: Data Maps
-    items:
-      - name: FlowMap
-        href: Nodes/DataMap--FlowMap.md
-      - name: Soil Map
-        href: Nodes/DataMap--Soil Map.md
-      - name: Surfacer
-        href: Nodes/DataMap--Surfacer.md
-      - name: Velocity
-        href: Nodes/DataMap--Velocity.md
+    - name: Aperture
+      href: Nodes/Filter--Aperture.md
+    - name: Apex
+      href: Nodes/Filter--Apex.md
+    - name: Bomber
+      href: Nodes/Filter--Bomber.md
+    - name: Cells
+      href: Nodes/Filter--Cells.md
+    - name: Distribution
+      href: Nodes/Filter--Distribution.md
+    - name: Noise
+      href: Nodes/Filter--Noise.md
+    - name: Origami
+      href: Nodes/Filter--Origami.md
+    - name: Polar
+      href: Nodes/Filter--Polar.md
+    - name: Recurve
+      href: Nodes/Filter--Recurve.md
+    - name: Repulse
+      href: Nodes/Filter--Repulse.md
+    - name: Rocks
+      href: Nodes/Filter--Rocks.md
+    - name: Subterrace
+      href: Nodes/Filter--Subterrace.md
+    - name: Swirl
+      href: Nodes/Filter--Swirl.md
+    - name: Terrace
+      href: Nodes/Filter--Terrace.md
+    - name: Whorl
+      href: Nodes/Filter--Whorl.md
   - name: Erosion
     items:
       - name: Alluvium
@@ -90,62 +130,16 @@
         href: Nodes/Erosion--Sediment.md
       - name: Stratify
         href: Nodes/Erosion--Stratify.md
-  - name: Filters
+  - name: Data Maps
     items:
-    - name: Aperture
-      href: Nodes/Filter--Aperture.md
-    - name: Apex
-      href: Nodes/Filter--Apex.md
-    - name: Bomber
-      href: Nodes/Filter--Bomber.md
-    - name: Cells
-      href: Nodes/Filter--Cells.md
-    - name: Distribution
-      href: Nodes/Filter--Distribution.md
-    - name: Noise
-      href: Nodes/Filter--Noise.md
-    - name: Origami
-      href: Nodes/Filter--Origami.md
-    - name: Polar
-      href: Nodes/Filter--Polar.md
-    - name: Recurve
-      href: Nodes/Filter--Recurve.md
-    - name: Repulse
-      href: Nodes/Filter--Repulse.md
-    - name: Rocks
-      href: Nodes/Filter--Rocks.md
-    - name: Subterrace
-      href: Nodes/Filter--Subterrace.md
-    - name: Swirl
-      href: Nodes/Filter--Swirl.md
-    - name: Terrace
-      href: Nodes/Filter--Terrace.md
-    - name: Whorl
-      href: Nodes/Filter--Whorl.md
-  - name: Outputs
-    items:
-    - name: Output
-      href: Nodes/Output--Output.md
-  - name: Primitives
-    items:
-    - name: Constant
-      href: Nodes/Primitive--Constant.md
-    - name: File
-      href: Nodes/Primitive--File.md
-    - name: Gradient
-      href: Nodes/Primitive--Gradient.md
-    - name: LineNoise
-      href: Nodes/Primitive--LineNoise.md
-    - name: Mountain
-      href: Nodes/Primitive--Mountain.md
-    - name: Perlin
-      href: Nodes/Primitive--Perlin.md
-    - name: Plates
-      href: Nodes/Primitive--Plates.md
-    - name: SlopeNoise
-      href: Nodes/Primitive--SlopeNoise.md
-    - name: Voronoi
-      href: Nodes/Primitive--Voronoi.md
+      - name: FlowMap
+        href: Nodes/DataMap--FlowMap.md
+      - name: Soil Map
+        href: Nodes/DataMap--Soil Map.md
+      - name: Surfacer
+        href: Nodes/DataMap--Surfacer.md
+      - name: Velocity
+        href: Nodes/DataMap--Velocity.md
   - name: Selectors
     items:
     - name: Angle
@@ -156,6 +150,26 @@
       href: Nodes/Selector--Height.md
     - name: Slope
       href: Nodes/Selector--Slope.md
+  - name: Color
+    items:
+    - name: Biome
+      href: Nodes/Color--Biome.md
+    - name: BrightnessContrast
+      href: Nodes/Color--BrightnessContrast.md
+    - name: CLUTer
+      href: Nodes/Color--CLUTer.md
+    - name: HSL
+      href: Nodes/Color--HSL.md
+    - name: Mixer
+      href: Nodes/Color--Mixer.md
+    - name: SatMaps
+      href: Nodes/Color--SatMaps.md
+    - name: Synth
+      href: Nodes/Color--Synth.md
+  - name: Outputs
+    items:
+    - name: Output
+      href: Nodes/Output--Output.md
 - name: Sculpting Tools
   items:
     - name: LandBreaker
