PDF generation added

--- a/pdf/toc.yml
+++ b/pdf/toc.yml
@@ -1,202 +1,6 @@
-- name: Getting Started
-  items:
-  - name: Basics of Terrain Design
-    href: ../documentation/Getting Started/Basics of Terrain Design.md
-  - name: Getting around
-    href: ../documentation/Getting Started/Getting around.md
-  - name: Installing Gaea
-    href: ../documentation/Getting Started/Installing Gaea.md
-  - name: Directed Erosion
-    href: ../documentation/Getting Started/Directed Erosion.md
-- name: Workflows
-  items:
-  - name: Graph Mode
-    href: ../documentation/Modes/Graph Mode.md
-  - name: Layer Mode
-    href: ../documentation/Modes/Layer Mode.md
-- name: Using Gaea
-  items:
-    - name: Building
-      href: ../documentation/Using Gaea/Building.md
-    - name: Color Production
-      href: ../documentation/Using Gaea/Color Production.md
-    - name: Heavy Nodes
-      href: ../documentation/Using Gaea/Heavy Nodes.md
-    - name: Post Processing
-      href: ../documentation/Using Gaea/Post Processing.md
-    - name: Preferences
-      href: ../documentation/Using Gaea/Preferences.md
-    - name: Terrain Scale
-      href: ../documentation/Using Gaea/Terrain Scale.md
-    - name: Toolbox
-      href: ../documentation/Using Gaea/Toolbox.md
-    - name: Viewport
-      href: ../documentation/Using Gaea/Viewport.md
+- name: Documentation
+  href: ../documentation/toc.yml
 - name: Node Reference
-  items:
-  - name: Adjustments
-    items:
-      - name: AutoLevel
-        href: ../documentation/Nodes/Adjustment--AutoLevel.md
-      - name: BiasGain
-        href: ../documentation/Nodes/Adjustment--BiasGain.md
-      - name: Blur
-        href: ../documentation/Nodes/Adjustment--Blur.md
-      - name: Clamp
-        href: ../documentation/Nodes/Adjustment--Clamp.md
-      - name: Contrast
-        href: ../documentation/Nodes/Adjustment--Contrast.md
-      - name: Denoise
-        href: ../documentation/Nodes/Adjustment--Denoise.md
-      - name: Displace
-        href: ../documentation/Nodes/Adjustment--Displace.md
-      - name: Flip
-        href: ../documentation/Nodes/Adjustment--Flip.md
-      - name: Gamma
-        href: ../documentation/Nodes/Adjustment--Gamma.md
-      - name: Heal
-        href: ../documentation/Nodes/Adjustment--Heal.md
-      - name: Sharpen
-        href: ../documentation/Nodes/Adjustment--Sharpen.md
-      - name: Sine
-        href: ../documentation/Nodes/Adjustment--Sine.md
-      - name: Threshold
-        href: ../documentation/Nodes/Adjustment--Threshold.md
-      - name: Transform
-        href: ../documentation/Nodes/Adjustment--Transform.md
-      - name: Zero Borders
-        href: ../documentation/Nodes/Adjustment--Zero Borders.md
-  - name: Color
-    items:
-    - name: Biome
-      href: ../documentation/Nodes/Color--Biome.md
-    - name: CLUTer
-      href: ../documentation/Nodes/Color--CLUTer.md
-    - name: Mixer
-      href: ../documentation/Nodes/Color--Mixer.md
-    - name: SatMaps
-      href: ../documentation/Nodes/Color--SatMaps.md
-  - name: Combiners
-    items:
-    - name: Combine
-      href: ../documentation/Nodes/Combiner--Combine.md
-  - name: Data Maps
-    items:
-      - name: FlowMap
-        href: ../documentation/Nodes/DataMap--FlowMap.md
-      - name: Soil Map
-        href: ../documentation/Nodes/DataMap--Soil Map.md
-      - name: Surfacer
-        href: ../documentation/Nodes/DataMap--Surfacer.md
-      - name: Velocity
-        href: ../documentation/Nodes/DataMap--Velocity.md
-  - name: Erosion
-    items:
-      - name: Alluvium
-        href: ../documentation/Nodes/Erosion--Alluvium.md
-      - name: Breaker
-        href: ../documentation/Nodes/Erosion--Breaker.md
-      - name: Buildup
-        href: ../documentation/Nodes/Erosion--Buildup.md
-      - name: Coast
-        href: ../documentation/Nodes/Erosion--Coast.md
-      - name: Convector
-        href: ../documentation/Nodes/Erosion--Convector.md
-      - name: Deposits
-        href: ../documentation/Nodes/Erosion--Deposits.md
-      - name: Directed Erosion
-        href: ../documentation/Nodes/Erosion--Directed Erosion.md
-      - name: Erosion
-        href: ../documentation/Nodes/Erosion--Erosion.md
-      - name: Fluvial
-        href: ../documentation/Nodes/Erosion--Fluvial.md
-      - name: Fold
-        href: ../documentation/Nodes/Erosion--Fold.md
-      - name: Fusion
-        href: ../documentation/Nodes/Erosion--Fusion.md
-      - name: Hydro
-        href: ../documentation/Nodes/Erosion--Hydro.md
-      - name: Landform
-        href: ../documentation/Nodes/Erosion--Landform.md
-      - name: MicroErosion
-        href: ../documentation/Nodes/Erosion--MicroErosion.md
-      - name: Sediment
-        href: ../documentation/Nodes/Erosion--Sediment.md
-      - name: Stratify
-        href: ../documentation/Nodes/Erosion--Stratify.md
-  - name: Filters
-    items:
-    - name: Aperture
-      href: ../documentation/Nodes/Filter--Aperture.md
-    - name: Apex
-      href: ../documentation/Nodes/Filter--Apex.md
-    - name: Bomber
-      href: ../documentation/Nodes/Filter--Bomber.md
-    - name: Cells
-      href: ../documentation/Nodes/Filter--Cells.md
-    - name: Distribution
-      href: ../documentation/Nodes/Filter--Distribution.md
-    - name: Noise
-      href: ../documentation/Nodes/Filter--Noise.md
-    - name: Origami
-      href: ../documentation/Nodes/Filter--Origami.md
-    - name: Polar
-      href: ../documentation/Nodes/Filter--Polar.md
-    - name: Recurve
-      href: ../documentation/Nodes/Filter--Recurve.md
-    - name: Repulse
-      href: ../documentation/Nodes/Filter--Repulse.md
-    - name: Rocks
-      href: ../documentation/Nodes/Filter--Rocks.md
-    - name: Subterrace
-      href: ../documentation/Nodes/Filter--Subterrace.md
-    - name: Swirl
-      href: ../documentation/Nodes/Filter--Swirl.md
-    - name: Terrace
-      href: ../documentation/Nodes/Filter--Terrace.md
-    - name: Whorl
-      href: ../documentation/Nodes/Filter--Whorl.md
-  - name: Outputs
-    items:
-    - name: Output
-      href: ../documentation/Nodes/Output--Output.md
-  - name: Primitives
-    items:
-    - name: Constant
-      href: ../documentation/Nodes/Primitive--Constant.md
-    - name: File
-      href: ../documentation/Nodes/Primitive--File.md
-    - name: Gradient
-      href: ../documentation/Nodes/Primitive--Gradient.md
-    - name: LineNoise
-      href: ../documentation/Nodes/Primitive--LineNoise.md
-    - name: Mountain
-      href: ../documentation/Nodes/Primitive--Mountain.md
-    - name: Perlin
-      href: ../documentation/Nodes/Primitive--Perlin.md
-    - name: Plates
-      href: ../documentation/Nodes/Primitive--Plates.md
-    - name: SlopeNoise
-      href: ../documentation/Nodes/Primitive--SlopeNoise.md
-    - name: Voronoi
-      href: ../documentation/Nodes/Primitive--Voronoi.md
-  - name: Selectors
-    items:
-    - name: Angle
-      href: ../documentation/Nodes/Selector--Angle.md
-    - name: Curvature
-      href: ../documentation/Nodes/Selector--Curvature.md
-    - name: Height
-      href: ../documentation/Nodes/Selector--Height.md
-    - name: Slope
-      href: ../documentation/Nodes/Selector--Slope.md
-- name: Sculpting Tools
-  items:
-    - name: LandBreaker
-      href: ../documentation/Sculpt Tools/LandBreaker.md
-- name: Misc
-  items:
-  - name: Common Issues
-    href: ../documentation/Other Topics/Common Issues.md
-  - name: Getting help
-    href: ../documentation/Other Topics/Getting help.md
+  href: ../reference/toc.yml
+- name: API
+  href: ../api/toc.yml
