--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -264,7 +264,7 @@
           "hash": "/DfwY0krjea40He0NWqQNA=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -1999,7 +1999,7 @@
           "hash": "SFeDYzOK3BxRSAKKLDvBFw=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
