--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -260,7 +260,7 @@ references:
   name: Preferences
   href: documentation/Preferences.html
 - uid: quickstarts
-  name: quickstarts
+  name: Quickstarts
   href: quickstarts/index.html
 - uid: Recurve
   name: Recurve
