--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -225,10 +225,10 @@
       "output": {
         ".html": {
           "relative_path": "documentation/Installing Gaea.html",
-          "hash": "/km+Ihm6d1JvpC7Cv5MeSw=="
+          "hash": "7fZ8Bd5xJcJvdidf7wG4Kg=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -321,7 +321,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/index.html",
-          "hash": "53JVb6fg/dvYsY1AgFL/iA=="
+          "hash": "FPh2RsKFbFH8kCe5mvFoKA=="
         }
       },
       "is_incremental": false,
@@ -333,7 +333,7 @@
       "output": {
         ".html": {
           "relative_path": "documentation/toc.html",
-          "hash": "ANXpOy9yl1XS+xiBpZGHUQ=="
+          "hash": "HIxi+4uV8hkpP6PbRysTeQ=="
         }
       },
       "is_incremental": false,
