--- a/documentation/toc.yml
+++ b/documentation/toc.yml
@@ -1,6 +1,6 @@
 - name: Welcome
   href: index.md
-- name: Getting Started
+- name: Introduction
   items:
   - name: Installing Gaea
     href: Installing Gaea.md
