--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -365,7 +365,7 @@ references:
   name: Threshold
   href: reference/Nodes/Adjustment--Threshold.html
 - uid: Tiled-Builds
-  name: Tiled-Builds
+  name: Tiled Builds
   href: documentation/Tiled%20Builds.html
 - uid: Toolbox
   name: Toolbox
