Live version updated

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1582,7 +1582,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Flip.html",
-          "hash": "PZxSTFqx2MQiMN/mxi1C2A=="
+          "hash": "cDsvXfJ8tYrjX2BGWNpqXA=="
         }
       },
       "is_incremental": false,
@@ -1606,7 +1606,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Heal.html",
-          "hash": "cfMlkjQfLqF83uz7TeKjOw=="
+          "hash": "fkCTOffELB7GgdLE+DK1aw=="
         }
       },
       "is_incremental": false,
@@ -1618,7 +1618,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Sharpen.html",
-          "hash": "uEwZDyuj40r2CosVzLw4Nw=="
+          "hash": "HQSoCPBLGH9B1ls6X7JnCg=="
         }
       },
       "is_incremental": false,
@@ -1630,7 +1630,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Sine.html",
-          "hash": "FkJS7pKf1Q2wXM3cIOhpGA=="
+          "hash": "FHdJXv7xxE0xHncs+CxY0g=="
         }
       },
       "is_incremental": false,
@@ -1666,7 +1666,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Adjustment--Zero Borders.html",
-          "hash": "6PEDZ+0aY0JdqJ8MMbOGJA=="
+          "hash": "DR++Wv7B3POMRG3Oy3tiVQ=="
         }
       },
       "is_incremental": false,
@@ -1690,7 +1690,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--BrightnessContrast.html",
-          "hash": "dTI2wZe1iK3N27J4aGZv/g=="
+          "hash": "h0mspxE9UHOkdlDX2idNrA=="
         }
       },
       "is_incremental": false,
@@ -1714,7 +1714,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Color--HSL.html",
-          "hash": "nx9lIBpe/c72P9wUieZDwg=="
+          "hash": "Xp24Gwk0mOH50qfffKMXcA=="
         }
       },
       "is_incremental": false,
@@ -1774,7 +1774,19 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/DataMap--FlowMap.html",
-          "hash": "GtLGOAPSBYz85+uK8Y4FNg=="
+          "hash": "qfr2yBfFPWlaOIB1LuAz0A=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "reference/Nodes/DataMap--Growth.md",
+      "output": {
+        ".html": {
+          "relative_path": "reference/Nodes/DataMap--Growth.html",
+          "hash": "uJTEn1b99ceTOI+q0/81lg=="
         }
       },
       "is_incremental": false,
@@ -1786,7 +1798,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/DataMap--Soil Map.html",
-          "hash": "X12WxD6MAjTRNKlqoQ1s7w=="
+          "hash": "1I4FF4gOouUvuNghTyTOPA=="
         }
       },
       "is_incremental": false,
@@ -1798,7 +1810,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/DataMap--Surfacer.html",
-          "hash": "9h/VBMrLbBPAKKLykFksgg=="
+          "hash": "BEzvG316xy+IO7uU+A99hg=="
         }
       },
       "is_incremental": false,
@@ -1846,7 +1858,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Buildup.html",
-          "hash": "tKwl3xNUwEICi4tshJWrNg=="
+          "hash": "oij000LBkBTCVhgsePgppw=="
         }
       },
       "is_incremental": false,
@@ -1918,7 +1930,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Fluvial.html",
-          "hash": "/mg+VJ/MBSgBJ/kR8Jq/fQ=="
+          "hash": "0AGWkguGr4HcEl428/3lpA=="
         }
       },
       "is_incremental": false,
@@ -1942,7 +1954,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Fusion.html",
-          "hash": "dP9Xd+AQ2ItLo8/iTMM2EA=="
+          "hash": "8SX9bgmNSe5tdKzJqi/ExQ=="
         }
       },
       "is_incremental": false,
@@ -1954,7 +1966,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Hydro.html",
-          "hash": "Mm4InkB0PAfB8l/9k2wEPw=="
+          "hash": "JavHhUIRS6w4iSL6Sloerg=="
         }
       },
       "is_incremental": false,
@@ -1966,7 +1978,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Landform.html",
-          "hash": "EHjMJTcb+x75TamDoDulDQ=="
+          "hash": "15hDb9QonfsgBEmESi13Jg=="
         }
       },
       "is_incremental": false,
@@ -1990,7 +2002,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Erosion--Sediment.html",
-          "hash": "/pckrRg16RzjYlbGoztQ+w=="
+          "hash": "h2p9D0VCh6tEtBpHu6oWsQ=="
         }
       },
       "is_incremental": false,
@@ -2062,7 +2074,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Distribution.html",
-          "hash": "hfWygfbIuRweygFA5pwrQw=="
+          "hash": "82bxyhaDg0ZNDLlYdO3g5g=="
         }
       },
       "is_incremental": false,
@@ -2074,7 +2086,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Noise.html",
-          "hash": "Xxpo3TJUcXtTbP3ihSa9vQ=="
+          "hash": "gx4ER8+/ZD6TDQLsbZNvgw=="
         }
       },
       "is_incremental": false,
@@ -2110,7 +2122,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Recurve.html",
-          "hash": "YjfeH1MLm/k/RD1hJfCoeQ=="
+          "hash": "xZH9v3tDYTv2uwubj6gd2Q=="
         }
       },
       "is_incremental": false,
@@ -2122,7 +2134,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Repulse.html",
-          "hash": "uGcG6YuTd8hSXnaXoszrOg=="
+          "hash": "paf08NRoiEXJbZ405Pfcdw=="
         }
       },
       "is_incremental": false,
@@ -2146,7 +2158,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Subterrace.html",
-          "hash": "RJYDxfkbEbO4WYfV2J42JA=="
+          "hash": "113VIjCYIrQGrRJdAIjw2w=="
         }
       },
       "is_incremental": false,
@@ -2170,7 +2182,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Terrace.html",
-          "hash": "8K8PN73YrgF3zOpQGIHhag=="
+          "hash": "iSqFZXqAxjVGfwBgY5aIMw=="
         }
       },
       "is_incremental": false,
@@ -2182,7 +2194,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Filter--Whorl.html",
-          "hash": "+vh6k8g5/SzhSMwUeD7uHw=="
+          "hash": "ol/dqJtZTcJRxTdCayOmSA=="
         }
       },
       "is_incremental": false,
@@ -2194,7 +2206,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Output--Output.html",
-          "hash": "TsHTjkeNcCVEXyZHc07wiQ=="
+          "hash": "CkOWNmG/MZWRW8lCQ0bnfQ=="
         }
       },
       "is_incremental": false,
@@ -2206,7 +2218,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Primitive--Constant.html",
-          "hash": "sB2qdvvy2HC5nZR+v9bgcQ=="
+          "hash": "1hXa67pZg5UoGvUCOyO3xg=="
         }
       },
       "is_incremental": false,
@@ -2218,7 +2230,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Primitive--Draw.html",
-          "hash": "cf3gTEALVLt6btmgPSBmyA=="
+          "hash": "2NZvIY9206zHN2jTzMarFA=="
         }
       },
       "is_incremental": false,
@@ -2242,7 +2254,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Primitive--Fault.html",
-          "hash": "cT/NNNuT8IYenPqzKZAKmQ=="
+          "hash": "HC0s27XIy1gztofotjI3+g=="
         }
       },
       "is_incremental": false,
@@ -2254,7 +2266,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Primitive--File.html",
-          "hash": "iTcUryQW1pqtKwkS92q7dg=="
+          "hash": "u9HdES/KJ7OyyCWOChDnww=="
         }
       },
       "is_incremental": false,
@@ -2266,7 +2278,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Primitive--Gradient.html",
-          "hash": "zzlPL2+iqjn0a4ARZbiL5g=="
+          "hash": "Cu5095TRLJMUAa4NmJ8O9A=="
         }
       },
       "is_incremental": false,
@@ -2278,7 +2290,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/Nodes/Primitive--Igneous.html",
-          "hash": "jmfREF3INPl3ZtSga+kk3w=="
+          "hash": "tuDzkN9YzJ2qt/ZV1ejw7A=="
         }
       },
       "is_incremental": false,
@@ -2458,7 +2470,7 @@
       "output": {
         ".html": {
           "relative_path": "reference/toc.html",
-          "hash": "VFShLQ7RuHtsaY8vSdIk/g=="
+          "hash": "JM1Y/Q/AU3lRt0s4WzZoXA=="
         }
       },
       "is_incremental": false,
