--- a/reference/toc.yml
+++ b/reference/toc.yml
@@ -132,12 +132,12 @@
         href: Nodes/Erosion--Stratify.md
   - name: Data Maps
     items:
-      - name: FlowMap
-        href: Nodes/DataMap--FlowMap.md
+      - name: Flow
+        href: Nodes/DataMap--Flow.md
       - name: Growth
         href: Nodes/DataMap--Growth.md
-      - name: Soil Map
-        href: Nodes/DataMap--Soil Map.md
+      - name: Soil
+        href: Nodes/DataMap--Soil.md
       - name: Surfacer
         href: Nodes/DataMap--Surfacer.md
       - name: Velocity
